--- a/src/App.css
+++ b/src/App.css
@@ -110,7 +110,7 @@ body:before {
   width: 100%;
   font-size: 3.5em;
   margin-bottom: 20px;
-  color: #ffd700;
+  color: #ffffff;
 }
 
 .header-row {
