--- a/src/App.css
+++ b/src/App.css
@@ -5,19 +5,31 @@ body, html {
   padding: 0;
   height: 100%;
   width: 100%;
-  background: linear-gradient(135deg, #4101ff, #880176, #9c0202); 
+  background: radial-gradient(circle, #4101ff, #880176, #9c0202);
   background-size: 400% 400%; /* Extend the gradient */
   color: #ffd700;
   font-family: 'VT323', monospace;
   overflow: hidden;
   position: relative;
-  animation: rainbowShift 15s ease infinite; /* Add animation for gradient shift */
+  animation: rainbowPulse 15s ease infinite; /* Add animation for radial gradient */
 }
 
-@keyframes rainbowShift {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
+@keyframes rainbowPulse {
+  0% {
+    background: radial-gradient(circle, #4101ff, #880176, #9c0202);
+  }
+  25% {
+    background: radial-gradient(circle, #ff0047, #ff8a00, #fcdc4d);
+  }
+  50% {
+    background: radial-gradient(circle, #28e0ae, #0044ff, #ff0047);
+  }
+  75% {
+    background: radial-gradient(circle, #9c0202, #4101ff, #880176);
+  }
+  100% {
+    background: radial-gradient(circle, #4101ff, #880176, #9c0202);
+  }
 }
 
 body:before {
@@ -49,6 +61,7 @@ body:before {
     left: calc(100% + 200px);
   }
 }
+
 
 .App {
   text-align: center;
