--- a/src/App.css
+++ b/src/App.css
@@ -16,19 +16,19 @@ body, html {
 
 @keyframes rainbowPulse {
   0% {
-    background: radial-gradient(circle, #4101ff, #880176, #9c0202);
+    background: radial-gradient(circle, #28e0ae, #0044ff, #ff0047);
   }
   25% {
-    background: radial-gradient(circle, #ff0047, #ff8a00, #fcdc4d);
+    background: radial-gradient(circle, #28e0ae, #0044ff, #ff0047);
   }
   50% {
     background: radial-gradient(circle, #28e0ae, #0044ff, #ff0047);
   }
   75% {
-    background: radial-gradient(circle, #9c0202, #4101ff, #880176);
+    background: radial-gradient(circle, #28e0ae, #0044ff, #ff0047);
   }
   100% {
-    background: radial-gradient(circle, #4101ff, #880176, #9c0202);
+    background: radial-gradient(circle, #28e0ae, #0044ff, #ff0047);
   }
 }
 
