--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body, html {
   padding: 0;
   height: 100%;
   width: 100%;
-  background: linear-gradient(135deg, #4101ff, #880176, #9c0202); 
+  background: linear-gradient(135deg, #4101ff, #880176, #190275); 
   background-size: 400% 400%; /* Extend the gradient */
   color: #ffd700;
   font-family: 'VT323', monospace;
