--- a/src/components/WalletDetails/WalletDetails.css
+++ b/src/components/WalletDetails/WalletDetails.css
@@ -29,3 +29,18 @@
 .copy-button:active {
   background-color: #123313; /* Even darker green on click */
 }
+
+/* WalletDetails.css */
+
+.token-list-container {
+  max-height: 600px; /* Set the maximum height for the scrollable area */
+  overflow-y: auto; /* Enable vertical scrolling */
+  border: 1px solid #e0e0e0; /* Optional: Add a border for separation */
+  padding: 8px; /* Optional: Add padding inside the container */
+}
+
+.token-list {
+  display: flex;
+  flex-direction: column; /* Stack cards vertically */
+  gap: 12px; /* Add space between cards */
+}
