--- a/src/components/TokenCard/TokenCard.css
+++ b/src/components/TokenCard/TokenCard.css
@@ -12,7 +12,6 @@
   width: 100%;
 }
 
-
 .token-column {
   padding: 0;
   text-align: left;
@@ -65,7 +64,7 @@
   font-family: monospace;
   color: #4caf50;
   margin: 0; /* Removed margin */
-  padding-top: 2px; /* Slight padding for spacing between symbol and amount */
+  padding-top: 1px; /* Slight padding for spacing between symbol and amount */
   line-height: 1.2;
 }
 
@@ -88,4 +87,66 @@
 
 .action-button:hover {
   background-color: #0056b3;
+}
+/* Modal styles */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 90%; /* Adjusted width for responsiveness */
+  max-width: 350px; /* Set a maximum width */
+  text-align: center;
+}
+
+.modal-content h3 {
+  margin-bottom: 20px;
+}
+
+.modal-content input {
+  display: block;
+  width: 100%; /* Ensure inputs don't exceed modal width */
+  box-sizing: border-box; /* Include padding and border in the element's width */
+  margin-bottom: 15px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.send-button,
+.cancel-button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.send-button {
+  background-color: #28a745;
+  color: white;
+}
+
+.send-button:hover {
+  background-color: #218838;
+}
+
+.cancel-button {
+  background-color: #dc3545;
+  color: white;
+}
+
+.cancel-button:hover {
+  background-color: #c82333;
 }
